--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coursera Test</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        #main {
+            padding: 20px;
+            background: #fff;
+            margin-top: 20px;
+        }
+        footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Welcome to Coursera Test Project</h1>
+        </div>
+    </header>
+    <div id="main" class="container">
+        <h2>About This Project</h2>
+        <p>This project is a demonstration of creating a GitHub Pages site.</p>
+        <h3>Features</h3>
+        <ul>
+            <li>Easy to setup</li>
+            <li>Responsive design</li>
+            <li>Customizable</li>
+        </ul>
+    </div>
+    <footer>
+        <p>Coursera Test Project &copy; 2024</p>
+    </footer>
+</body>
+</html>
